modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/analyzer/errors/cast_int_to_array.gd
func test():
	var integer := 1
	print(integer as Array)
